--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,9 @@
         "tonysm/tailwindcss-laravel": "^2.2"
     },
     "require-dev": {
+        "brianium/paratest": "^7.14",
         "fakerphp/faker": "^1.23",
         "hotwired-laravel/hotreload": "^0.0.8",
-        "laravel/pail": "^1.2.2",
-        "laravel/sail": "^1.41",
-        "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.6",
-        "soloterm/solo": "^0.5.0",
         "jcergolj/additional-test-assertions-for-laravel": "^2.2",
         "jcergolj/http-client-generator-for-laravel": "dev-master",
         "jcergolj/laravel-form-request-assertions": "^1.5",
@@ -36,8 +32,13 @@
         "jcergolj/rector-for-laravel": "^0.7.0",
         "larastan/larastan": "^3.0",
         "laravel/boost": "^1.0",
+        "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.18",
+        "laravel/sail": "^1.41",
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "^8.6",
         "phpunit/phpunit": "^12.0",
+        "soloterm/solo": "^0.5.0",
         "worksome/envy": "^1.1"
     },
     "autoload": {
